[package]
version = "0.1.0"
name = "fraud-proof-program"
edition = "2021"

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
fraud-proof-lib = { path = "../lib" }
essential-types = { path = "../../essential-base/crates/types" }
essential-constraint-vm = { path = "../../essential-base/crates/constraint-vm" }
sp1-zkvm = "2.0.0"
